ECA-407: make it compile on java 1.4 for one more version.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@4067 37aeb1de-b14b-0410-9a0e-82b28170d228